@@ -17,76 +17,65 @@ package org.gradle.launcher.daemon.configuration;
 
 import com.google.common.collect.ImmutableList;
 import org.gradle.api.internal.file.FileCollectionFactory;
-import org.gradle.internal.buildconfiguration.DaemonJvmPropertiesDefaults;
-import org.gradle.internal.jvm.JpmsConfiguration;
-import org.gradle.internal.jvm.inspection.JvmVendor;
-import org.gradle.internal.jvm.inspection.JvmVersionDetector;
+import org.gradle.internal.buildconfiguration.tasks.DaemonJvmPropertiesAccessor;
 import org.gradle.internal.nativeintegration.services.NativeServices.NativeServicesMode;
 import org.gradle.jvm.toolchain.JavaLanguageVersion;
 import org.gradle.jvm.toolchain.JvmImplementation;
 import org.gradle.jvm.toolchain.JvmVendorSpec;
-import org.gradle.jvm.toolchain.internal.DefaultJavaLanguageVersion;
-import org.gradle.jvm.toolchain.internal.DefaultJvmVendorSpec;
 import org.gradle.jvm.toolchain.internal.DefaultToolchainConfiguration;
 import org.gradle.jvm.toolchain.internal.ToolchainConfiguration;
-import org.gradle.launcher.configuration.BuildLayoutResult;
 import org.gradle.launcher.daemon.context.DaemonRequestContext;
 import org.gradle.launcher.daemon.toolchain.DaemonJvmCriteria;
+import org.gradle.launcher.daemon.toolchain.ToolchainDownloadUrlProvider;
+import org.gradle.process.internal.JvmOptions;
 import org.gradle.util.internal.GUtil;
+import org.jspecify.annotations.Nullable;
 
-import javax.annotation.Nullable;
 import java.io.File;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
 
 public class DaemonParameters {
     static final int DEFAULT_IDLE_TIMEOUT = 3 * 60 * 60 * 1000;
     public static final int DEFAULT_PERIODIC_CHECK_INTERVAL_MILLIS = 10 * 1000;
 
     public static final List<String> DEFAULT_JVM_ARGS = ImmutableList.of("-Xmx512m", "-Xms256m", "-XX:MaxMetaspaceSize=384m", "-XX:+HeapDumpOnOutOfMemoryError");
-    public static final List<String> ALLOW_ENVIRONMENT_VARIABLE_OVERWRITE = ImmutableList.of("--add-opens=java.base/java.util=ALL-UNNAMED");
 
     private final ToolchainConfiguration toolchainConfiguration = new DefaultToolchainConfiguration();
+
     private final File gradleUserHomeDir;
 
     private File baseDir;
     private int idleTimeout = DEFAULT_IDLE_TIMEOUT;
 
     private int periodicCheckInterval = DEFAULT_PERIODIC_CHECK_INTERVAL_MILLIS;
-    private final DaemonJvmOptions jvmOptions;
+    private final JvmOptions jvmOptions;
     private boolean applyInstrumentationAgent = true;
     private NativeServicesMode nativeServicesMode = NativeServicesMode.ENABLED;
     private Map<String, String> envVariables;
     private boolean enabled = true;
-    private boolean hasJvmArgs;
-    private boolean userDefinedImmutableJvmArgs;
     private boolean foreground;
     private boolean stop;
     private boolean status;
     private DaemonPriority priority = DaemonPriority.NORMAL;
     private DaemonJvmCriteria requestedJvmCriteria = new DaemonJvmCriteria.LauncherJvm();
+    private ToolchainDownloadUrlProvider toolchainDownloadUrlProvider;
 
-    public DaemonParameters(BuildLayoutResult layout, FileCollectionFactory fileCollectionFactory) {
-        this(layout, fileCollectionFactory, Collections.<String, String>emptyMap());
+    public DaemonParameters(File gradleUserHomeDir, FileCollectionFactory fileCollectionFactory) {
+        this(gradleUserHomeDir, fileCollectionFactory, Collections.<String, String>emptyMap());
     }
 
-    public DaemonParameters(BuildLayoutResult layout, FileCollectionFactory fileCollectionFactory, Map<String, String> extraSystemProperties) {
-        jvmOptions = new DaemonJvmOptions(fileCollectionFactory);
+    public DaemonParameters(File gradleUserHomeDir, FileCollectionFactory fileCollectionFactory, Map<String, String> extraSystemProperties) {
+        this.jvmOptions = new JvmOptions(fileCollectionFactory);
         if (!extraSystemProperties.isEmpty()) {
-            List<String> immutableBefore = jvmOptions.getAllImmutableJvmArgs();
             jvmOptions.systemProperties(extraSystemProperties);
-            List<String> immutableAfter = jvmOptions.getAllImmutableJvmArgs();
-            userDefinedImmutableJvmArgs = !immutableBefore.equals(immutableAfter);
         }
-        baseDir = new File(layout.getGradleUserHomeDir(), "daemon");
-        gradleUserHomeDir = layout.getGradleUserHomeDir();
-        envVariables = new HashMap<>(System.getenv());
+        jvmOptions.jvmArgs(DEFAULT_JVM_ARGS);
+        this.gradleUserHomeDir = gradleUserHomeDir;
+        this.baseDir = new File(gradleUserHomeDir, "daemon");
+        this.envVariables = new HashMap<>(System.getenv());
     }
 
     public DaemonRequestContext toRequestContext() {
@@ -129,10 +118,6 @@ public class DaemonParameters {
         return jvmOptions.getAllImmutableJvmArgs();
     }
 
-    public List<String> getEffectiveSingleUseJvmArgs() {
-        return jvmOptions.getAllSingleUseImmutableJvmArgs();
-    }
-
     public DaemonJvmCriteria getRequestedJvmCriteria() {
         return requestedJvmCriteria;
     }
@@ -141,49 +126,14 @@ public class DaemonParameters {
         this.requestedJvmCriteria = requestedJvmCriteria;
     }
 
-    public void setRequestedJvmCriteriaFromMap(@Nullable Map<String, String> buildProperties) {
-        String requestedVersion = buildProperties.get(DaemonJvmPropertiesDefaults.TOOLCHAIN_VERSION_PROPERTY);
+    public void setRequestedJvmCriteriaFromMap(@Nullable Map<String, String> daemonJvmProperties) {
+        DaemonJvmPropertiesAccessor daemonJvmAccessor = new DaemonJvmPropertiesAccessor(daemonJvmProperties);
+        JavaLanguageVersion requestedVersion = daemonJvmAccessor.getVersion();
         if (requestedVersion != null) {
-            JavaLanguageVersion javaVersion;
-            try {
-                javaVersion = DefaultJavaLanguageVersion.fromFullVersion(requestedVersion);
-            } catch (Exception e) {
-                // TODO: This should be pushed somewhere else so we consistently report this message in the right context.
-                throw new IllegalArgumentException(String.format("Value '%s' given for %s is an invalid Java version", requestedVersion, DaemonJvmPropertiesDefaults.TOOLCHAIN_VERSION_PROPERTY));
-            }
-
-            final JvmVendorSpec javaVendor;
-            String requestedVendor = buildProperties.get(DaemonJvmPropertiesDefaults.TOOLCHAIN_VENDOR_PROPERTY);
-
-            if (requestedVendor != null) {
-                Optional<JvmVendor.KnownJvmVendor> knownVendor =
-                    Arrays.stream(JvmVendor.KnownJvmVendor.values()).filter(e -> e.name().equals(requestedVendor)).findFirst();
-
-                if (knownVendor.isPresent() && knownVendor.get()!=JvmVendor.KnownJvmVendor.UNKNOWN) {
-                    javaVendor = DefaultJvmVendorSpec.of(knownVendor.get());
-                } else {
-                    javaVendor = DefaultJvmVendorSpec.matching(requestedVendor);
-                }
-            } else {
-                // match any vendor
-                javaVendor = DefaultJvmVendorSpec.any();
-            }
-
-            this.requestedJvmCriteria = new DaemonJvmCriteria.Spec(javaVersion, javaVendor, JvmImplementation.VENDOR_SPECIFIC);
+            JvmVendorSpec requestedJavaVendor = daemonJvmAccessor.getVendor();
+            this.requestedJvmCriteria = new DaemonJvmCriteria.Spec(requestedVersion, requestedJavaVendor, JvmImplementation.VENDOR_SPECIFIC, daemonJvmAccessor.getNativeImageCapable());
+            this.toolchainDownloadUrlProvider = new ToolchainDownloadUrlProvider(daemonJvmAccessor.getToolchainDownloadUrls());
         }
-    }
-
-    // TODO: Move this to the construction of DaemonRequestContext to avoid mutating the parameters? Is that possible?
-    public void applyDefaultsFromJvmCriteria(JvmVersionDetector detector) {
-        if (getRequestedJvmCriteria().probeJavaLanguageVersion(detector).asInt() >= 9) {
-            Set<String> jpmsArgs = new LinkedHashSet<>(ALLOW_ENVIRONMENT_VARIABLE_OVERWRITE);
-            jpmsArgs.addAll(JpmsConfiguration.GRADLE_DAEMON_JPMS_ARGS);
-            jvmOptions.jvmArgs(jpmsArgs);
-        }
-        if (hasJvmArgs) {
-            return;
-        }
-        jvmOptions.jvmArgs(DEFAULT_JVM_ARGS);
     }
 
     public Map<String, String> getSystemProperties() {
@@ -196,27 +146,23 @@ public class DaemonParameters {
         Map<String, String> systemProperties = new HashMap<String, String>();
         GUtil.addToMap(systemProperties, System.getProperties());
         GUtil.addToMap(systemProperties, jvmOptions.getMutableSystemProperties());
-        GUtil.addToMap(systemProperties, jvmOptions.getImmutableDaemonProperties());
+        GUtil.addToMap(systemProperties, jvmOptions.getImmutableSystemProperties());
         return systemProperties;
     }
 
     public Map<String, String> getMutableAndImmutableSystemProperties() {
         Map<String, String> systemProperties = new HashMap<String, String>();
         GUtil.addToMap(systemProperties, jvmOptions.getMutableSystemProperties());
-        GUtil.addToMap(systemProperties, jvmOptions.getImmutableDaemonProperties());
+        GUtil.addToMap(systemProperties, jvmOptions.getImmutableSystemProperties());
         return systemProperties;
     }
 
-    public void setJvmArgs(Iterable<String> jvmArgs) {
-        hasJvmArgs = true;
-        List<String> immutableBefore = jvmOptions.getAllImmutableJvmArgs();
-        jvmOptions.setAllJvmArgs(jvmArgs);
-        List<String> immutableAfter = jvmOptions.getAllImmutableJvmArgs();
-        userDefinedImmutableJvmArgs = userDefinedImmutableJvmArgs || !immutableBefore.equals(immutableAfter);
+    public void addJvmArgs(Iterable<String> jvmArgs) {
+        jvmOptions.jvmArgs(jvmArgs);
     }
 
-    public boolean hasUserDefinedImmutableJvmArgs() {
-        return userDefinedImmutableJvmArgs;
+    public void setJvmArgs(Iterable<String> jvmArgs) {
+        jvmOptions.setAllJvmArgs(jvmArgs);
     }
 
     public void setEnvironmentVariables(Map<String, String> envVariables) {
@@ -224,24 +170,23 @@ public class DaemonParameters {
     }
 
     public void setDebug(boolean debug) {
-        userDefinedImmutableJvmArgs = userDefinedImmutableJvmArgs || debug;
         jvmOptions.setDebug(debug);
     }
 
     public void setDebugPort(int debug) {
-        jvmOptions.getDebugOptions().getPort().set(debug);
+        jvmOptions.getDebugSpec().setPort(debug);
     }
 
     public void setDebugHost(String host) {
-        jvmOptions.getDebugOptions().getHost().set(host);
+        jvmOptions.getDebugSpec().setHost(host);
     }
 
     public void setDebugSuspend(boolean suspend) {
-        jvmOptions.getDebugOptions().getSuspend().set(suspend);
+        jvmOptions.getDebugSpec().setSuspend(suspend);
     }
 
     public void setDebugServer(boolean server) {
-        jvmOptions.getDebugOptions().getServer().set(server);
+        jvmOptions.getDebugSpec().setServer(server);
     }
 
     public DaemonParameters setBaseDir(File baseDir) {
@@ -301,6 +246,10 @@ public class DaemonParameters {
 
     public ToolchainConfiguration getToolchainConfiguration() {
         return toolchainConfiguration;
+    }
+
+    public ToolchainDownloadUrlProvider getToolchainDownloadUrlProvider() {
+        return toolchainDownloadUrlProvider;
     }
 
     public DaemonPriority getPriority() {
